--- a/fms-gui-client/src/app/page-not-found/page-not-found.component.html
+++ b/fms-gui-client/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,7 @@
 <main>
-  <h1>
-    Page not found!
-  </h1>
+  <div class="margin-side-1em">
+    <h1>
+      Page not found!
+    </h1>
+  </div>
 </main>
