--- a/fms-gui-client/src/app/cards/cards.component.html
+++ b/fms-gui-client/src/app/cards/cards.component.html
@@ -1,23 +1,19 @@
-<!-- Contains the cards from the right side of the old status panel -->
+<!-- Displays cards, which contain information about the most important status bytes -->
 <main>
-  <mat-toolbar>
-    <span>{{ title }}</span>
-  </mat-toolbar>
-  <div *ngIf="cardsService.isDataPresent" class="margin-side-1em">
-    <div id="cards" class="flex">
-      <mat-card *ngFor="let card of cardsService.getData()">
-        <mat-card-header>
-          <mat-card-title>{{card.name}}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <ul>
-            <li *ngFor="let item of Utils.castToArray(card.value)">
-              {{item.name}}: {{cardsService.getValue(item.value)}}
-            </li>
-          </ul>
-        </mat-card-content>
-      </mat-card>
-    </div>
+  <mat-toolbar>{{ title }}</mat-toolbar>
+  <div *ngIf="cardsService.isDataPresent" class="margin-side-1em flex">
+    <mat-card *ngFor="let card of cardsService.getData()">
+      <mat-card-header>
+        <mat-card-title>{{card.name}}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <ul>
+          <li *ngFor="let item of Utils.castToArray(card.value)">
+            {{item.name}}: {{cardsService.getValue(item.value)}}
+          </li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
   </div>
   <app-loading *ngIf="!cardsService.isDataPresent"></app-loading>
 </main>
