--- a/fms-gui-client/src/app/status-panel/status-panel.component.html
+++ b/fms-gui-client/src/app/status-panel/status-panel.component.html
@@ -7,7 +7,7 @@
     <!-- TODO: Add a grid-gap: 4px -->
     <div class="grid grid-cols-4 grid-gap-sm">
       <div *ngFor='let item of Utils.castToArray(fmsDataService.getValue(basePath))'>
-        <div class="status-element flex left align-items-center" [id]="item.name"
+        <div class="status-element d-flex left align-items-center" [id]="item.name"
              [appStatusHighlight]="(this.fmsDataService.isDifferentValue(this.basePath + '/' + item.name)) ? item : null">
           <span class="badge" [ngClass]="{
             'badge-success': item.value,
