--- a/fms-gui-client/src/app/status-panel/status-panel.component.html
+++ b/fms-gui-client/src/app/status-panel/status-panel.component.html
@@ -4,8 +4,7 @@
   <div class="margin-side-1em" *ngIf="fmsDataService.isDataPresent">
     <!-- Contains the status bytes, which indicate if something is on or off -->
     <h2>Flags</h2>
-    <!-- TODO: Add a grid-gap: 4px -->
-    <div class="grid grid-cols-4 grid-gap-sm">
+    <div class="grid-cols-4 grid-gap-sm">
       <div *ngFor='let item of Utils.castToArray(fmsDataService.getValue(basePath))'>
         <div class="status-element d-flex left align-items-center" [id]="item.name"
              [appStatusHighlight]="(this.fmsDataService.isDifferentValue(this.basePath + '/' + item.name)) ? item : null">
