--- a/fms-gui-client/src/app/controls/controls.component.html
+++ b/fms-gui-client/src/app/controls/controls.component.html
@@ -2,7 +2,7 @@
 <main>
   <mat-toolbar>{{ title }}</mat-toolbar>
   <div *ngIf="controlService.isDataPresent" class="margin-side-1em">
-    <div class="grid grid-cols-5">
+    <div class="grid-cols-5">
       <button mat-button *ngFor="let control of controlService.getData()" (click)="onControlButtonClicked(control)" class="text-left">
         <span>{{control.code}}</span>
         &nbsp;
