--- a/fms-gui-client/src/app/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/flight-mode/flight-mode.component.html
@@ -1,11 +1,12 @@
 <!-- Displays the current flight with the data from the FMS JSON -->
 <main>
   <mat-toolbar>{{ title }}</mat-toolbar>
-  <div *ngIf="fmsDataService.isDataPresent" id="flight-mode-main" class="margin-side-1em h-100">
+  <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
+  <div id="flight-mode-main" class="margin-side-1em h-100">
     <div class="grid-cols-2">
       <div id="flight-mode-chart" class="d-flex align-items-center"></div>
-      <div id="flight-mode-information" class="grid-cols-1" *ngIf="fmsDataService.getValue('GNSS') !== null">
-        <div *ngFor="let item of gnss[0]" class="grid-cols-2">
+      <div id="flight-mode-information" class="grid-cols-1" *ngIf="this.gnss !== null && fmsDataService.isDataPresent">
+        <div *ngFor="let item of gnssArray[0]" class="grid-cols-2">
           <span>
             {{item.name}}
           </span>
@@ -16,5 +17,4 @@
       </div>
     </div>
   </div>
-  <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
 </main>
