--- a/fms-gui-client/src/app/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/flight-mode/flight-mode.component.html
@@ -1,20 +1,22 @@
 <!-- Displays the current flight with the data from the FMS JSON -->
-<main>
+<main class="d-flex flex-column">
   <mat-toolbar>{{ title }}</mat-toolbar>
-  <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
-  <div id="flight-mode-main" class="margin-side-1em h-100">
-    <div class="grid-cols-2">
-      <div id="flight-mode-chart" class="d-flex align-items-center"></div>
-      <div id="flight-mode-information" class="grid-cols-1" *ngIf="this.gnss !== null && fmsDataService.isDataPresent">
-        <div *ngFor="let item of gnssArray[0]" class="grid-cols-2">
-          <span>
-            {{item.name}}
-          </span>
-          <span>
-            {{item.value}}
-          </span>
-        </div>
-      </div>
+  <div id="flight-mode-main" class="margin-side-1em flex-grow-1">
+    <div class="grid-cols-2 h-100" *ngIf="fmsDataService.isDataPresent">
+      <app-radar class="h-100"></app-radar>
+      <ul id="flight-mode-information" *ngIf="this.gnss !== null">
+        <li *ngFor="let item of gnssArray[0]">
+          <div class="grid-cols-2">
+             <span>
+               {{item.name}}
+             </span>
+            <span>
+              {{item.value}}
+            </span>
+          </div>
+        </li>
+      </ul>
     </div>
+    <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
   </div>
 </main>
