--- a/fms-gui-client/src/styles/grid.scss
+++ b/fms-gui-client/src/styles/grid.scss
@@ -2,11 +2,15 @@
 
 $cols: 5;
 
-@for $i from 1 through $cols {
+@for $i from 2 through $cols {
   .grid-cols-#{$i} {
     display: grid;
     grid-template-columns: repeat($i, 1fr);
   }
+}
+
+.grid-cols-1 {
+  display: grid;
 }
 
 .grid-cols-4 {
