FMS-C2 Update the flight window, only care about the altitude, not the correct position of the rocket

--- a/fms-gui-client/src/app/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.scss
@@ -1,12 +1,8 @@
 .circles {
   fill: none;
-  stroke: black;
-  stroke-width: 1;
 }
-.position {
-  fill: red;
 
-  &:hover {
-    fill: orange;
-  }
+.position, .circles {
+  stroke: black;
+  stroke-width: 1
 }
