FMS-C2 Add different background colors for circle areas in the radar component

--- a/fms-gui-client/src/app/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.scss
@@ -1,8 +1,12 @@
 .circles {
-  fill: none;
+  opacity: 0.5;
 }
 
-.position, .circles {
+.circles, .position {
   stroke: black;
   stroke-width: 1
+}
+
+.center {
+  fill: black;
 }
