--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -30,14 +30,15 @@ h2 {
   font-size: 1.5rem !important;
 }
 
-html, body {
-  min-height: 100%;
+html, body, app-root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 15px !important;
-  margin: 0;
 }
 
 main {
@@ -62,3 +63,4 @@ ul, ol {
 .material-icons.md-inactive {
   color: rgba(0, 0, 0, 0.26);
 }
+
