--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -20,6 +20,14 @@
   margin-left: 0.5em;
 }
 
+.w-5rem {
+  width: 5rem;
+}
+
+.w-fit-content {
+  width: max-content;
+}
+
 
 // Tags
 a, button, button:focus {
