--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -1,1 +1,25 @@
-<div id="radar-chart-div" class="d-flex align-items-center h-100"></div>
+<div id="radar-chart-div" class="d-flex h-100">
+  <div id="radar-configuration">
+    <form [formGroup]="radarForm.configurationForm">
+      <div class="d-flex flex-column align-items-end">
+        <div formGroupName="center" class="d-flex flex-column">
+          <h3 class="mat-h3">Center</h3>
+
+          <mat-form-field>
+            <mat-label>Latitude</mat-label>
+            <label>
+              <input type="number" formControlName="latitude" matInput placeholder="0" min="-90" max="90"/>
+            </label>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Longitude</mat-label>
+            <label>
+              <input type="number" formControlName="longitude" matInput placeholder="0" min="-180" max="180"/>
+            </label>
+          </mat-form-field>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
