FMS-C28 Provide rotation via input

--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -19,6 +19,17 @@
             </label>
           </mat-form-field>
         </div>
+
+        <div class="d-flex flex-column">
+          <h3 class="mat-h3">Rotation</h3>
+
+          <mat-form-field>
+            <mat-label>Degree</mat-label>
+            <label>
+              <input type="number" formControlName="rotation" matInput placeholder="0" />
+            </label>
+          </mat-form-field>
+        </div>
       </div>
     </form>
   </div>
