--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -1,7 +1,10 @@
 <div id="radar-chart-div" class="d-flex h-100">
   <div id="radar-configuration">
+    <mat-icon id="toggle-icon" (click)="toggleConfiguration()" title="Collapse radar configuration">
+      keyboard_arrow_down
+    </mat-icon>
     <form [formGroup]="radarForm.configurationForm">
-      <div class="d-flex flex-column align-items-end">
+      <div class="d-flex flex-column align-items-end" id="radar-config-container" *ngIf="isConfigOpen">
         <div formGroupName="center" class="d-flex flex-column">
           <h3 class="mat-h3">Center</h3>
 
