--- a/fms-gui-client/src/app/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.scss
@@ -1,3 +1,5 @@
+
+
 .circles {
   opacity: 0.5;
 }
@@ -23,4 +25,12 @@ label {
 
 g {
   transform-origin: center;
+}
+
+#toggle-icon {
+  cursor: pointer;
+
+  &:hover {
+    background-color: lightgrey;
+  }
 }
