--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -29,7 +29,18 @@
           <mat-form-field>
             <mat-label>Degree</mat-label>
             <label>
-              <input type="number" formControlName="rotation" matInput placeholder="0" />
+              <input type="number" formControlName="rotation" matInput placeholder="0" value="0"/>
+            </label>
+          </mat-form-field>
+        </div>
+
+        <div class="d-flex flex-column">
+          <h3 class="mat-h3">Scale</h3>
+
+          <mat-form-field>
+            <mat-label>Value</mat-label>
+            <label>
+              <input type="number" formControlName="scale" matInput placeholder="1" min="0" step="0.01" value="1"/>
             </label>
           </mat-form-field>
         </div>
