--- a/fms-gui-client/src/app/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.scss
@@ -1,5 +1,3 @@
-
-
 .circles {
   opacity: 0.5;
 }
@@ -21,6 +19,14 @@
 
 label {
   margin-bottom: 0;
+}
+
+line {
+  &.direction {
+    stroke: black;
+    stroke-width: 1;
+    opacity: 0.5;
+  }
 }
 
 g {
