Provide zooming, remove unnecessary scaling and translating from the HTML (keep the code)

--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -23,6 +23,7 @@
           </mat-form-field>
         </div>
 
+        <!--
         <div formGroupName="translation" class="d-flex flex-column">
           <h3 class="mat-h3">Translation</h3>
 
@@ -40,6 +41,7 @@
             </label>
           </mat-form-field>
         </div>
+        -->
 
         <div class="d-flex flex-column">
           <h3 class="mat-h3">Rotation</h3>
@@ -52,6 +54,7 @@
           </mat-form-field>
         </div>
 
+        <!--
         <div class="d-flex flex-column">
           <h3 class="mat-h3">Scale</h3>
 
@@ -62,6 +65,9 @@
             </label>
           </mat-form-field>
         </div>
+        -->
+
+        <button mat-raised-button (click)="reset()" value="Reset">Reset</button>
       </div>
     </form>
   </div>
