FMS-C34 Add "unsubscribe from subjects" in RadarComponent's onDestroy

--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -67,7 +67,7 @@
         </div>
         -->
 
-        <button mat-raised-button (click)="reset()" value="Reset">Reset</button>
+        <button mat-raised-button (click)="resetZoom()" value="Reset Zoom">Reset Zoom</button>
       </div>
     </form>
   </div>
