--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -6,8 +6,6 @@
 }
 
 // Classes
-
-
 .margin-1em {
   margin: 1em;
 }
@@ -18,6 +16,14 @@
 
 .margin-left-0-5em {
   margin-left: 0.5em;
+}
+
+.toggle-icon {
+  cursor: pointer;
+
+  &:hover {
+    background-color: lightgrey;
+  }
 }
 
 .w-5rem {
