FMS-C42 Add styles for the search and result list in the status-matrix component

--- a/fms-gui-client/src/app/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.html
@@ -1,6 +1,6 @@
 <div id="radar-chart-div" class="d-flex h-100">
   <div id="radar-configuration">
-    <mat-icon class="toggle-icon" (click)="toggleConfiguration()" title="Collapse radar configuration">
+    <mat-icon id="toggle-icon" class="pointer" (click)="toggleConfiguration()" title="Collapse radar configuration">
       keyboard_arrow_down
     </mat-icon>
     <form [formGroup]="radarForm.configurationForm">
