--- a/fms-gui-client/src/app/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/visualization/radar/radar.component.scss
@@ -36,10 +36,11 @@ g {
   }
 }
 
-#toggle-icon {
+.pointer {
   cursor: pointer;
 
   &:hover {
-    background-color: lightgrey;
+    background: #f8f8f8;
+    filter: brightness(90%);
   }
 }
