--- a/fms-gui-client/src/app/visualization/status-matrix/status-matrix.component.html
+++ b/fms-gui-client/src/app/visualization/status-matrix/status-matrix.component.html
@@ -1,6 +1,6 @@
 <div id="status-matrix-chart-div" class="h-100">
   <div id="status-matrix-configuration">
-    <mat-icon class="toggle-icon" (click)="toggleConfiguration()" title="Collapse status matrix configuration">
+    <mat-icon id="toggle-icon" class="pointer" (click)="toggleConfiguration()" title="Collapse status matrix configuration">
       keyboard_arrow_down
     </mat-icon>
 
@@ -14,21 +14,22 @@
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
       </div>
-
-      <ul *ngFor="let data of Utils.castToArray(fmsDataService.getValue(basePath)) | filter: searchText">
-        <li class="search-entry">
-          <a (click)="selectAttribute(data)">
-            {{data}}
-          </a>
-        </li>
-      </ul>
+      <div *ngIf="searchText" class="search-box">
+        <ul>
+          <li class="search-entry pointer" *ngFor="let data of Utils.castToArray(fmsDataService.getValue(basePath)) | filter: searchText">
+            <span (click)="selectAttribute(data)">
+              {{data}}
+            </span>
+          </li>
+        </ul>
+      </div>
 
       <div *ngIf="selectedAttributes.length > 0" id="selected-attributes">
-        <h3>Selected Attributes</h3>
+        <h3 class="mat-h3">Selected</h3>
         <ul>
-          <li *ngFor="let attribute of selectedAttributes" class="flex align-items-center">
+          <li *ngFor="let attribute of selectedAttributes" class="d-flex align-items-center">
             <span>{{attribute}}</span>
-            <mat-icon matSuffix (click)="removeAttribute(attribute)" class="pointer">close</mat-icon>
+            <mat-icon matSuffix (click)="removeAttribute(attribute)" class="pointer last-flex-item">close</mat-icon>
           </li>
         </ul>
       </div>
