--- a/fms-gui-client/src/app/components/status-panel/matrix/attributes-list/attributes-list.component.scss
+++ b/fms-gui-client/src/app/components/status-panel/matrix/attributes-list/attributes-list.component.scss
@@ -1,13 +1,31 @@
 $grey: #f8f8f8;
 
 .attribute {
+  border-bottom: 1px solid $grey;
+  filter: brightness(90%);
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+
+  &:last-child {
+    border: none;
+  }
+}
+
+.attribute-list {
   border: 1px solid $grey;
   filter: brightness(90%);
+
+  display: block;
+  border-radius: 4px;
 }
 
 .reorder {
   &:hover {
-    cursor: grabbing;
+    cursor: move;
   }
 }
 
@@ -15,4 +33,24 @@ button.mat-icon-button {
   width: auto;
   height: auto;
   line-height: normal;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating, .attribute-list.cdk-drop-list-dragging .attribute:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+mat-list-item > * {
+  width: 100% !important;
 }
