FMS-C42 Fix minor functionality and design issues in the status matrix

--- a/fms-gui-client/src/app/components/status-panel/matrix/attributes-list/attributes-list.component.html
+++ b/fms-gui-client/src/app/components/status-panel/matrix/attributes-list/attributes-list.component.html
@@ -1,12 +1,14 @@
 <div *ngIf="attributeService.selectedAttributes.length > 0" id="selected-attributes">
   <h3 class="mat-h3">Selected</h3>
   <mat-list cdkDropList (cdkDropListDropped)="drop($event)" class="attribute-list">
-    <mat-list-item *ngFor="let attribute of attributeService.selectedAttributes" class="attribute w-100" cdkDrag>
-      <mat-icon mat-list-icon class="reorder">reorder</mat-icon>
-      <span>{{attribute}}</span>
-      <button mat-icon-button (click)="attributeService.removeAttribute(attribute)" class="pointer">
-        <mat-icon>close</mat-icon>
-      </button>
+    <mat-list-item *ngFor="let attribute of attributeService.selectedAttributes" cdkDrag>
+      <div class="attribute d-flex justify-content-between align-items-center flex-row w-100">
+        <mat-icon mat-list-icon class="reorder">reorder</mat-icon>
+        <span>{{attribute}}</span>
+        <button mat-icon-button (click)="attributeService.removeAttribute(attribute)" class="pointer">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
     </mat-list-item>
   </mat-list>
 </div>
